# home_paper_trainer

./: .dockerignore  .env  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PRD  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pre-commit.yml
backend/: __init__.py  config.py  main.py
backend/database/: __init__.py  models.py
backend/models/: __init__.py  chapter.py  paper.py  user_summary.py
backend/routes/: __init__.py  health.py  papers.py
backend/services/: __init__.py  paper_service.py  processing_service.py  summarization_service.py  validation_service.py
frontend/static/css/: main.css
frontend/static/js/: main.js
templates/: base.html  index.html
templates/papers/: chapters.html  index.html  read.html
tests/: test_chapter_carousel.py  test_health.py  test_paper_grid.py  test_paper_processing.py  test_paper_submission.py  test_reading_routes_simple.py
